--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button class="one column bgg-gray">9</button>
           <button class="one column bgg-gray">0</button>
           <button class="one column bgg-gray">+ =</button>
-          <button class=" one column bgg-gray">Backspace</button>
+          <button class="one wide column bgg-gray">Backspace</button>
         </div>
         <div class="ui fifteen column grid">
           <button class="column bgg-gray">Tab</button>
@@ -94,10 +94,13 @@
           <button class="column bgg-gray alphabet">B</button>
           <button class="column bgg-gray alphabet">N</button>
           <button class="column bgg-gray alphabet">M</button>
-          <button class="column bgg-gray alphabet"><</button>
+          <button class="column bgg-gray alphabet">&lt</button>
           <button class="column bgg-gray alphabet">></button>
-          <button class="column bgg-gray">?</button>
-          <button class="two wide column bgg-gray">Shift</button>
+          <button class="column bgg-gray">/ ?</button>
+          <button class="ui one wide column bgg-gray">
+            <i class="fa fa-arrow-up"></i>
+          </button>
+          <button class="one wide column bgg-gray">Shift</button>
         </div>
         <div class="ui sixteen column grid">
           <button class="ui one wide column bgg-gray">Ctrl</button>
@@ -109,13 +112,13 @@
           <button class="ui five wide column bgg-gray alphabet">Space</button>
 
           <button class="column bgg-gray alphabet">Alt</button>
+          
           <button class="column bgg-gray">Ctrl</button>
+          <button class="column bgg-gray"><i class="fa fa-options"></i></button>
           <button class="ui one wide column bgg-gray">
             <i class="fa fa-arrow-left"></i>
           </button>
-          <button class="ui one wide column bgg-gray">
-            <i class="fa fa-arrow-up"></i>
-          </button>
+          
           <button class="ui one wide column bgg-gray">
             <i class="fa fa-arrow-down"></i>
           </button>
